force-app/main/default/objects/ssot__MarketingChannelTargetedSegment__dlm/fields/ssot__DeviceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceType__c</fullName>
    <label>DeviceType</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>