force-app/main/default/objects/ssot__MarketingChannelTargetedSegment__dlm/fields/ssot__ExcludedCriteriaText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExcludedCriteriaText__c</fullName>
    <label>ExcludedCriteria</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExcludedCriteriaText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>