force-app/main/default/objects/ssot__MarketingChannelTargetedSegment__dlm/fields/ssot__KeywordList__c.field-meta.xml
<CustomField>
    <fullName>ssot__KeywordList__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KeywordList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>