force-app/main/default/objects/ssot__MarketingChannelTargetedSegment__dlm/fields/ssot__TargetedSegmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetedSegmentType__c</fullName>
    <label>Targeted Segment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetedSegmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>